[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "flakehound"
version = "0.1.0"
description = "Find out WHY a test is flaky — not just that it is. Root-cause localization for flaky Python tests."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Aron Jose" }]
keywords = ["testing", "flaky-tests", "pytest", "ci", "debugging", "root-cause", "fault-localization"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Testing",
  "Framework :: Pytest",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
]
dependencies = []   # MVP core has ZERO runtime deps — pure stdlib

[project.optional-dependencies]
llm = ["anthropic>=0.40"]   # optional: human-readable explanations (v0.4)
dev = ["pytest>=7"]

[project.scripts]
flakehound = "flakehound.cli:main"
[project.entry-points.pytest11]
flakehound = "flakehound.pytest_plugin"

[project.urls]
Homepage = "https://github.com/aronjose2005/flakehound"
Repository = "https://github.com/aronjose2005/flakehound"
Issues = "https://github.com/aronjose2005/flakehound/issues"
Changelog = "https://github.com/aronjose2005/flakehound/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["flakehound*"]
[tool.setuptools.package-data]
flakehound = ["py.typed"]
[tool.pytest.ini_options]
# Normal `pytest` runs ONLY the real test suite. The deliberately-flaky demo
# files in examples/ are analysed on demand via --flakehound, never collected here.
testpaths = ["tests"]
[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
# High-signal rules only: pyflakes (dead code / likely bugs), warnings,
# flake8-bugbear, and pyupgrade. Pure-formatting rules (line length, import
# ordering) are intentionally omitted to avoid churning hand-formatted code.
select = ["F", "W", "B", "UP"]
